# UnicodeId

./: Cargo.toml  DEPENDENTS.md  LICENSE  README.md
Source/: lib.rs  tables.rs  tests.rs
benches/: id.rs
