[features]
bench = []
default = []
no_std = []

[lib]
path = "Source/lib.rs"

[package]
authors = [
	"Boshen <boshenc@gmail.com>",
	"erick.tryzelaar <erick.tryzelaar@gmail.com>",
	"kwantam <kwantam@gmail.com>",
	"Manish Goregaokar <manishsmail@gmail.com>",
]
description = """
Determine whether characters have the ID_Start
or ID_Continue properties according to
Unicode Standard Annex #31.
"""
documentation = "https://docs.rs/unicode-id"
exclude = ["/.github/**", "/scripts/*"]
homepage = "https://github.com/Boshen/unicode-id"
keywords = ["text", "unicode", "unicode-id", "tr31"]
license-file = "LICENSE"
name = "unicode-id"
readme = "README.md"
repository = "https://github.com/Boshen/unicode-id"
rust-version = "1.85.0"
version = "0.3.5"

# [dev-dependencies]
# criterion = "0.3.5"

# [[bench]]
# name = "id"
# harness = false
